log-output/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: log-output-svc

spec:
  type: NodePort

  selector:
    app: log-output

  ports:
    - name: http
      protocol: TCP
      nodePort: 30081
      targetPort: 8081
      port: 2345
